--- a/templates/wyniki_uzytkownika.html
+++ b/templates/wyniki_uzytkownika.html
@@ -65,7 +65,7 @@ list-style-type:none;
 		
 		<div class="prawywynik" style="margin-top:20px;">
 		
-
+			<form action="/usun_wpis" method="">
 			{% for i in range(dl) %}
 			
 				<div id="contentw_{{i}}">
