--- a/templates/wynik.html
+++ b/templates/wynik.html
@@ -34,12 +34,16 @@ list-style-type:none;
     <span> </span>
     <ul class="menu_list">
       <a href="/"><li>Strona glowna</li></a>
-      <a href="#"><li>Formularz</li></a>
-      <a href="#"><li>Wyniki</li></a>
-      <a href="#"><li>O nas</li></a>
+      <a href="/form"><li>Formularz</li></a>
+      <a href="/about"><li>O nas</li></a>
       {% if session['login'] %}
-	  <a href="#" id="logs"><li id="log"><p style="color:tomato;">{{session['login']}}</p><ul class="submenu">
-	  <a href="/wyloguj" id="wylogujsie_przycisk"><li id="wylog">Wyloguj się</li></a>
+	  <a href="/profil" id="logs"><li id="log"><p style="color:tomato;font-family:">{{session['login']}}</p><ul class="submenu">
+	  <a href="/profil" id="profil_przycisk"><li id="wylog">Profil</li></a>
+	  
+	  <a href="/wyniki" id="wyniki_przycisk"><li id="wylog">Wyniki</li></a>
+	   
+	  <a href="/wyloguj" id="wylogujsie_przycisk"><li  style=" color:tomato;"  id="wylog">Wyloguj się</li></a>
+	   
 	  </ul>	</li></a>  
 
 	  {% else %}
@@ -47,7 +51,7 @@ list-style-type:none;
 	  {% endif %}
 	</ul>
 
-  
+  <img class="logo" src="{{ url_for('static', filename='logo.png') }}" height="40px" style=""/>
 </div>
 <div class="content">
 
@@ -78,7 +82,7 @@ list-style-type:none;
 		<p class="wyniki" style="color:#cdcdcd;">Opis: </p><textarea style="margin-left:10%;"maxlength="300" name="opis"></textarea>
 		<button class="formularz_przycisk" type="submit" style="">Zapisz</button>
 		{% else %}
-		<p>Będąc <a href="/login">zalogowanym</a> możliwe jest zapisywanie otrzymanych rezultatów</p>
+		<p class="tabela_wynikow" style="margin-left:10%;padding-top:20px;">Będąc <a href="/login" style="color:tomato;">zalogowanym</a> możliwe jest zapisywanie otrzymanych rezultatów</p>
 		{% endif %}
 
 
@@ -87,7 +91,7 @@ list-style-type:none;
 
 </div>
 
-<div class="footer">mikronapedy</div>
+<div class="footer">© Copyright by Adrian Hałys &amp Arkadiusz Hanejko</div>
 {% endblock %}
 </body>
 </html>
