--- a/templates/index.html
+++ b/templates/index.html
@@ -34,16 +34,15 @@ list-style-type:none;
     <span> </span>
     <ul class="menu_list">
       <a href="/"><li>Strona glowna</li></a>
-      <a href="#"><li>Formularz</li></a>
-      <a href="#"><li>Wyniki</li></a>
-      <a href="#"><li>O nas</li></a>
+      <a href="/form"><li>Formularz</li></a>
+      <a href="/about"><li>O nas</li></a>
       {% if session['login'] %}
-	  <a href="#" id="logs"><li id="log"><p style="color:tomato;">{{session['login']}}</p><ul class="submenu">
-	  <a href="/wyloguj" id="profil_przycisk"><li id="wylog">Profil</li></a>
+	  <a href="/profil" id="logs"><li id="log"><p style="color:tomato;font-family:">{{session['login']}}</p><ul class="submenu">
+	  <a href="/profil" id="profil_przycisk"><li id="wylog">Profil</li></a>
 	  
-	  <a href="/wylo3guj" id="wyniki_przycisk"><li id="wylog">Wyniki</li></a>
+	  <a href="/wyniki" id="wyniki_przycisk"><li id="wylog">Wyniki</li></a>
 	   
-	  <a href="/wyloguj"id="wylogujsie_przycisk"><li  style=" color:tomato;"  id="wylog">Wyloguj się</li></a>
+	  <a href="/wyloguj" id="wylogujsie_przycisk"><li  style=" color:tomato;"  id="wylog">Wyloguj się</li></a>
 	   
 	  </ul>	</li></a>  
 
@@ -52,10 +51,12 @@ list-style-type:none;
 	  {% endif %}
 	</ul>
 
-  
+  <img class="logo" src="{{ url_for('static', filename='logo.png') }}" height="40px" style=""/>
 </div>
 <div class="content">
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+
+
 </div>
 
 <div class="footer">© Copyright by Adrian Hałys &amp Arkadiusz Hanejko</div>
