--- a/templates/wynik.html
+++ b/templates/wynik.html
@@ -35,7 +35,7 @@ list-style-type:none;
     <ul class="menu_list">
       <a href="/"><li>Strona glowna</li></a>
       <a href="/form"><li>Formularz</li></a>
-      <a href="/about"><li>O nas</li></a>
+      <a href="/tips"><li>Jak dbać o serce</li></a>
       {% if session['login'] %}
 	  <a href="/profil" id="logs"><li id="log"><p style="color:tomato;font-family:">{{session['login']}}</p><ul class="submenu">
 	  <a href="/profil" id="profil_przycisk"><li id="wylog">Profil</li></a>
