--- a/templates/index.html
+++ b/templates/index.html
@@ -53,9 +53,13 @@ list-style-type:none;
 
   <img class="logo" src="{{ url_for('static', filename='logo.png') }}" height="40px" style=""/>
 </div>
-<div class="content">
-
-
+<div class="content" style="padding-top:150px;">
+<img class="serceglowne" src="{{ url_for('static', filename='heart.png') }}"  style=""/>
+<p class="tip" style="margin-left:100px;font-size:16px;margin-right:100px;padding:20px;padding-top:0px; ">W dzisiejszym dotkniętym przez choroby cywilizacyjne i zabieganym świecie, często temat zdrowia odsuwany jest na dalszy plan. Wyjątkiem od tej reguły nie jest niestety zdrowie naszego serca, które będąc obok mózgu najważniejszym organem ciała człowieka jest bardziej jak nigdy narażone przez powszechny siedzący tryb życia oraz popularność szybkiego, nie do końca zdrowego jedzenia. Panująca ogólna niechęć społeczeństwa do wizyt u lekarza także zwiększa ryzyko różnorakich powikłań, gdyż przeważnie o tym co nam dolega dowiadujemy się gdy jest już późno. </p>
+<p class="tip" style="margin-left:100px;font-size:16px;margin-right:100px;padding:20px; ">
+Serwis HEAiRT wykorzystuje techniki sztucznej inteligencji, aby na podstawie historycznych danych opracowanych na kilku światowych uczelniach określić ryzyko wystąpienia choroby tego jakże ważnego, ale bardzo wrażliwego organu jakim jest serce. Jego misją jest zwiększenie świadomości społeczeństwa na temat istniejących zagrożeń. Serwis udostępnia test umożliwiający sprawdzenie oszacowanej szansy wystąpienia problemów z sercem z myślą, że wczesne wykrycie rodzących się problemów może pomóc w oszczędzeniu nieprzyjemności sobie i swoim bliskim.</p>
+<p class="tip" style="margin-left:100px;font-size:16px;margin-right:100px;padding:20px; ">
+<b>UWAGA!</b> Test zwraca jedynie informację poglądową i jego wynik nie jest w stu procentach idealny i rzetelny. HEAiRT nie ma na celu zastąpienie prawdziwego lekarza i głęboko zalecamy skierowanie się do odpowiedniego specjalisty w przypadku jakichkolwiek wątpliwości co do swojego stanu zdrowia.</p>
 
 </div>
 
