--- a/templates/formularz.html
+++ b/templates/formularz.html
@@ -107,7 +107,7 @@ Asymptomatyczny - małe zawały serca<br/></span></div>Typ bólu klatki piersiow
 					<option value="2">Przerost lewej komory (Hipertrofia)</option>
 				</select><br/><br/><hr><br/>
 			
-			<div class="atr"><p class="nazwapola"><div class="tooltip"><img class="p" src="{{url_for('static', filename='question-mark.png')}}" width="10px"  /><span class="tooltiptext">Różnice w położeniu odcinka ST EKG podczas wysiłku i spoczynku ( w milimetrach )</span></div>Różnice odcinka ST podczas spoczynku i podczas wysiłku</p> </div><input class="pola_formularza" id="f1_st" type="number" name="st" required/><br/><br/><hr><br/>
+			<div class="atr"><p class="nazwapola"><div class="tooltip"><img class="p" src="{{url_for('static', filename='question-mark.png')}}" width="10px"  /><span class="tooltiptext">Różnice w położeniu odcinka ST EKG podczas wysiłku i spoczynku ( w milimetrach )</span></div>Różnice odcinka ST podczas spoczynku i podczas wysiłku</p> </div><input class="pola_formularza" id="f1_st" step="0.01" type="number" name="st" required/><br/><br/><hr><br/>
 			
 			<div class="atr"><p class="nazwapola"><div class="tooltip"><img class="p" src="{{url_for('static', filename='question-mark.png')}}" width="10px"  /><span class="tooltiptext">Typ nachylenie odcinka ST widoczny na badaniu EKG</span></div>Nachylenie odcinka ST:</p> </div> <select class="pola_formularza" id="f1_nachylenie" name="nachylenie">
 					<option value="1">W górę</option>
