--- a/templates/logowanie.html
+++ b/templates/logowanie.html
@@ -12,7 +12,7 @@
     <span> </span>
     <ul class="menu_list">
       <a href="/"><li>Strona glowna</li></a>
-      <a href="/form"><li>Formularz</li></a>
+      <a href="/form"><li>Test</li></a>
       <a href="/tips"><li>Jak dbać o serce</li></a>
       {% if session['login'] %}
 	  <a href="/profil" id="logs"><li id="log"><p style="color:tomato;font-family:">{{session['login']}}</p><ul class="submenu">
